test/JDBC/expected/BABEL-INSERT-EXECUTE.out
create table t1 (a int);
GO
insert into t1 values (1);
GO
~~ROW COUNT: 1~~

create table t2 (a int);
GO

-- procedure with SELECT
create procedure sp_multi_selects as
select * from t1;
select a from t1;
go
-- normal execute
execute sp_multi_selects;
go
~~START~~
int
1
~~END~~

~~START~~
int
1
~~END~~

-- insert execute
select * from t2;
go
~~START~~
int
~~END~~

insert into t2 execute sp_multi_selects;
go
~~ROW COUNT: 2~~

select * from t2;
go
~~START~~
int
1
1
~~END~~

-- insert execute a second time
insert into t2 execute sp_multi_selects;
go
~~ROW COUNT: 2~~

select * from t2;
go
~~START~~
int
1
1
1
1
~~END~~


-- column mismatch
create table t3(a int, b int, c int);
GO
insert into t3 execute sp_multi_selects;
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: structure of query does not match function result type)~~

select * from t3;
GO
~~START~~
int#!#int#!#int
~~END~~

-- INSERT with matching column list
insert into t3 (a) execute sp_multi_selects;
GO
~~ROW COUNT: 2~~

select * from t3;
GO
~~START~~
int#!#int#!#int
1#!#<NULL>#!#<NULL>
1#!#<NULL>#!#<NULL>
~~END~~


-- DML statements in procedure
create procedure sp_dml_select as
insert into t1 values(2);
update t1 set a = 3 where a = 2;
delete t1 where a = 3;
select * from t1;
GO
select * from t1;
GO
~~START~~
int
1
~~END~~

-- normal EXECUTE - each DML should send result to client
execute sp_dml_select;
GO
~~ROW COUNT: 1~~

~~ROW COUNT: 1~~

~~ROW COUNT: 1~~

~~START~~
int
1
~~END~~

-- INSERT EXECUTE - only final INSERT should send result to client
insert into t2 execute sp_dml_select;
GO
~~ROW COUNT: 1~~


-- DDL statements in procedure
create procedure sp_ddl_select as
create table sp_ddl_select_table(c int);
select * from sp_ddl_select_table;
drop table sp_ddl_select_table;
GO
-- normal EXECUTE
execute sp_ddl_select;
GO
~~START~~
int
~~END~~

-- INSERT EXECUTE
insert into t2 execute sp_ddl_select;
GO

-- test using OUTPUT clause in INSERT EXECUTE
insert into t2 output inserted.* into t3.a exec sp_multi_selects;
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: The OUTPUT clause cannot be used in an INSERT...EXEC statement.)~~


-- COMMIT with no BEGIN TRAN
create procedure sp_commit_no_begin as
insert into t1 values(3);
commit;
select * from t1;
GO
-- normal EXECUTE - should insert into t1
select * from t1;
GO
~~START~~
int
1
~~END~~

execute sp_commit_no_begin;
GO
~~ROW COUNT: 1~~

~~ERROR (Code: 3902)~~

~~ERROR (Message: COMMIT can only be used in transaction blocks)~~

~~START~~
int
1
3
~~END~~

select * from t1;
GO
~~START~~
int
1
3
~~END~~

-- INSERT EXECUTE - should not insert into t1 or t2
select * from t2;
GO
~~START~~
int
1
1
1
1
1
~~END~~

insert into t2 execute sp_commit_no_begin;
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: Cannot use the COMMIT statement within an INSERT-EXEC statement unless BEGIN TRANSACTION is used first.)~~

select * from t1;
GO
~~START~~
int
1
3
~~END~~

select * from t2;
GO
~~START~~
int
1
1
1
1
1
~~END~~

-- more COMMIT than BEGIN TRAN
create procedure sp_commits_begin as
begin tran
insert into t1 values(3);
commit;
commit;
select * from t1;
go
-- normal EXECUTE - should insert into t1
execute sp_commits_begin;
GO
~~ROW COUNT: 1~~

~~ERROR (Code: 3902)~~

~~ERROR (Message: COMMIT can only be used in transaction blocks)~~

~~START~~
int
1
3
3
~~END~~

select * from t1;
GO
~~START~~
int
1
3
3
~~END~~

-- INSERT EXECUTE - should not insert into t1 or t2
insert into t2 execute sp_commits_begin;
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: Cannot use the COMMIT statement within an INSERT-EXEC statement unless BEGIN TRANSACTION is used first.)~~

select * from t1;
GO
~~START~~
int
1
3
3
~~END~~

select * from t2;
GO
~~START~~
int
1
1
1
1
1
~~END~~


-- ROLLBACK stmt is not allowed in INSERT EXEC, whether there is BEGIN TRAN or
-- not.
-- ROLLBACK with no BEGIN TRAN
create procedure sp_rollback_no_begin as
insert into t1 values(4);
rollback;
select * from t1;
GO
-- normal EXECUTE - should insert into t1
execute sp_rollback_no_begin
GO
~~ROW COUNT: 1~~

~~ERROR (Code: 3903)~~

~~ERROR (Message: ROLLBACK can only be used in transaction blocks)~~

~~START~~
int
1
3
3
4
~~END~~

select * from t1;
GO
~~START~~
int
1
3
3
4
~~END~~

-- INSERT EXECUTE - should not insert into t1 or t2
select * from t2;
GO
~~START~~
int
1
1
1
1
1
~~END~~

insert into t2 execute sp_rollback_no_begin;
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: Cannot use the ROLLBACK statement within an INSERT-EXEC statement.)~~

select * from t1;
GO
~~START~~
int
1
3
3
4
~~END~~

select * from t2;
GO
~~START~~
int
1
1
1
1
1
~~END~~

-- ROLLBACK with BEGIN TRAN
create procedure sp_rollback_with_begin as
begin tran;
insert into t1 values(4);
rollback;
select * from t1;
go
-- normal EXECUTE - should insert into t1 and rollback
execute sp_rollback_with_begin
GO
~~ROW COUNT: 1~~

~~START~~
int
1
3
3
4
~~END~~

select * from t1;
GO
~~START~~
int
1
3
3
4
~~END~~

-- INSERT EXECUTE - should not insert into t1 or t2
select * from t2;
GO
~~START~~
int
1
1
1
1
1
~~END~~

insert into t2 execute sp_rollback_with_begin;
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: Cannot use the ROLLBACK statement within an INSERT-EXEC statement.)~~

select * from t1;
GO
~~START~~
int
1
3
3
4
~~END~~

select * from t2;
GO
~~START~~
int
1
1
1
1
1
~~END~~


-- column mismatch with previous DML - should not insert into t1 or t2
create procedure sp_select_mismatch_with_dml as
insert into t1 values(5);
select a, a from t1;
GO
select * from t1;
GO
~~START~~
int
1
3
3
4
~~END~~

select * from t2;
GO
~~START~~
int
1
1
1
1
1
~~END~~

insert into t2 execute sp_select_mismatch_with_dml
go
~~ERROR (Code: 33557097)~~

~~ERROR (Message: structure of query does not match function result type)~~

select * from t1;
GO
~~START~~
int
1
3
3
4
~~END~~

select * from t2;
GO
~~START~~
int
1
1
1
1
1
~~END~~


-- column mismatch with previous DML in subtransaction - should not insert into
-- t1 or t2
create procedure sp_select_mismatch_after_subtran as
begin tran;
insert into t1 values(6);
commit;
select a, a from t1;
GO
select * from t1;
GO
~~START~~
int
1
3
3
4
~~END~~

select * from t2;
GO
~~START~~
int
1
1
1
1
1
~~END~~

insert into t2 execute sp_select_mismatch_after_subtran;
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: structure of query does not match function result type)~~

select * from t1;
GO
~~START~~
int
1
3
3
4
~~END~~

select * from t2;
GO
~~START~~
int
1
1
1
1
1
~~END~~


-- procedure with parameter
create procedure sp_select_param (@a int) as
select * from t1 where a = @a;
GO
insert into t1 values (2);
GO
~~ROW COUNT: 1~~

select * from t1;
GO
~~START~~
int
1
3
3
4
2
~~END~~

-- normal EXECUTE
execute sp_select_param 1;
go
~~START~~
int
1
~~END~~

select * from t2;
GO
~~START~~
int
1
1
1
1
1
~~END~~

-- INSERT EXECUTE
insert into t2 execute sp_select_param 1;
GO
~~ROW COUNT: 1~~

select * from t2;
GO
~~START~~
int
1
1
1
1
1
1
~~END~~


-- test if PL parser correctly recognizes whether EXECUTE starts a new statement
-- or not
-- INSERT has VALUES - EXEC should start a new statement
insert into t1 values(7)
exec sp_multi_selects
go
~~ROW COUNT: 1~~

~~START~~
int
1
3
3
4
2
7
~~END~~

~~START~~
int
1
3
3
4
2
7
~~END~~

-- INSERT has SELECT - EXEC should start a new statement
insert into t2 values(8)
insert into t1 select * from t2 where a = 8
exec sp_multi_selects
go
~~ROW COUNT: 1~~

~~ROW COUNT: 1~~

~~START~~
int
1
3
3
4
2
7
8
~~END~~

~~START~~
int
1
3
3
4
2
7
8
~~END~~

-- INSERT has EXEC - SELECT should start a new statement
insert into t2 exec sp_multi_selects
select * from t1
go
~~ROW COUNT: 14~~

~~START~~
int
1
3
3
4
2
7
8
~~END~~


-- test INSERT EXEC with inline code blocks
delete t1;
go
~~ROW COUNT: 7~~

insert into t1 exec('select 1; select 2');
go
~~ROW COUNT: 2~~

select * from t1;
go
~~START~~
int
1
2
~~END~~

-- test INSERT EXEC with inline code blocks on table variable
declare @a table (a int);
insert into @a execute('select * from t1; select 3');
select * from @a;
go
~~ROW COUNT: 3~~

~~START~~
int
1
2
3
~~END~~


create schema user_defined_sch;
go

create type user_defined_sch.test_tbl_type as table (a int, b varchar(10))
go

create table user_defined_sch.test_tbl (a int, b varchar(10))
go

insert into user_defined_sch.test_tbl values (1, 'AAA'), (2, 'Bbb');
go
~~ROW COUNT: 2~~


create procedure user_defined_sch.test_proc
as
begin
    select * from user_defined_sch.test_tbl;
end;
go

exec user_defined_sch.test_proc
go
~~START~~
int#!#varchar
1#!#AAA
2#!#Bbb
~~END~~


declare @tbl_var user_defined_sch.test_tbl_type
insert into @tbl_var (a,b) exec user_defined_sch.test_proc
select * from @tbl_var
go
~~ROW COUNT: 2~~

~~START~~
int#!#varchar
1#!#AAA
2#!#Bbb
~~END~~


-- clean up
drop table t1
go
drop table t2
go
drop table t3
go
drop procedure sp_multi_selects
go
drop procedure sp_dml_select
go
drop procedure sp_ddl_select
go
drop procedure sp_commit_no_begin
go
drop procedure sp_commits_begin
go
drop procedure sp_rollback_no_begin
go
drop procedure sp_rollback_with_begin
go
drop procedure sp_select_mismatch_with_dml
go
-- drop savepoint
drop procedure sp_select_mismatch_after_subtran
go
drop procedure sp_select_param
go
drop procedure user_defined_sch.test_proc
go
drop table user_defined_sch.test_tbl
go
drop type user_defined_sch.test_tbl_type
go
drop schema user_defined_sch
go
